[package]
name = "lgi_schedule"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#rand = "0.8.5"
jiff = { version = "0.2.0", features = ["js", "serde"] }
serde = { version = "1.0.219", features = ["derive"] }
quick-xml = { version = "0.38", features = ["serialize"] }
